# linux-fireface-mixer

./: .SRCINFO  .gitignore  CMakeLists.txt  PKGBUILD  PKGBUILD-bin  README-kr.md  README.md  cmake_uninstall.cmake.in  totalmixer.desktop
.github/workflows/: release.yml
src/: AlsaBackend.cpp  AlsaBackend.hpp  IMixerBackend.hpp  alsa_core.cpp  alsa_core.hpp  config_manager.cpp  config_manager.hpp  gui_app.cpp  gui_app.hpp  gui_main.cpp  main.cpp  osc_server.cpp  osc_server.hpp  server_main.cpp  service_checker.cpp  service_checker.hpp  ui_helpers.hpp
src/backends/: GrpcClientBackend.cpp  GrpcClientBackend.hpp  OscClientBackend.cpp  OscClientBackend.hpp
src/protos/: fireface.proto
src/server/: MixerGrpcService.cpp  MixerGrpcService.hpp  MixerOscService.cpp  MixerOscService.hpp
